--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 plugins {
 	id 'maven-publish'
     id 'net.researchgate.release' version '2.8.1'
+    id "com.google.cloud.artifactregistry.gradle-plugin" version "2.1.4"
     id 'java'
+    id 'idea'
 }
-
-apply plugin: 'idea'
 
 group = 'com.ag04.opta'
 sourceCompatibility = '11'
@@ -19,14 +19,18 @@ repositories {
     mavenCentral()
 }
 
-
 publishing {
     publications {
         maven(MavenPublication) {
+            groupId 'com.ag04.opta'
             from(components.java)
         }
     }
     repositories {
+        maven {
+            url "artifactregistry://europe-west3-maven.pkg.dev/ag04-inventory/maven-repository"
+        }
+        /*
         if (project.hasProperty('github_username') && project.hasProperty('github_password')) {
             maven {
                 name = "GitHubPackages"
@@ -36,7 +40,7 @@ publishing {
                     password github_password
                 }
             }
-        }
+        }*/
     }
 }
 
